# lh-mod-loghero

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mod_loghero.c
samples/: loghero-global.conf
sdk/: APIAccess.cpp  APIAccess.h  APIAccessInterface.h  CMakeLists.txt  GlobalDefines.h  HttpRequestCurl.cpp  HttpRequestCurl.h  HttpRequestInterface.h  LibLogHero.cpp  LibLogHero.h  LockingPolicyLockGuard.h  LogBuffer.h  LogContainerPolicyInMemory.h  LogEvent.cpp  LogEvent.h  LogEventSerializerInterface.h  LogEventSerializerJson.cpp  LogEventSerializerJson.h  LogHeroSession.cpp  LogHeroSession.h  LogHeroSessionInterface.h  LogHeroSettings.h  LogHeroSingleton.cpp  LogHeroSingleton.h  Logging.h  LoggingPolicyBoost.cpp  LoggingPolicyBoost.h  LoggingPolicyDisabled.h  SubmitPolicyAsync.h  SubmitPolicySync.h  TimerPolicyCTime.h  Zlib.cpp  Zlib.h
sdk/cmake/modules/: FindJsonCpp.cmake  FindLoki.cmake
sdk/conan/: conanfile.txt
sdk/conan/profiles/: linux.gcc
sdk/test/: APIAccessTest.cpp  APIAccessTest.h  CMakeLists.txt  FakeHttpRequest.cpp  FakeHttpRequest.h  LibTestMain.cpp  LibTestSamples.h  LogBufferTest.cpp  LogBufferTest.h  LogEventSerializerJsonTest.cpp  LogEventSerializerJsonTest.h  LogEventTest.cpp  LogEventTest.h  LogHeroSessionTest.cpp  LogHeroSessionTest.h  LogHeroSingletonTest.cpp  LogHeroSingletonTest.h  MockHttpRequest.h  SubmitPolicyAsyncTest.cpp  SubmitPolicyAsyncTest.h  SubmitPolicyMock.h  TimerPolicyMock.cpp  TimerPolicyMock.h  TimerPolicyTest.cpp  TimerPolicyTest.h
